--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "webpack",
+  "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "nodemon ./src/server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "nodemon": "^1.18.10",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2"
   },
